fix(html/css):make css code semantically readable/ in order - make html readable

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+/* Body specific */
+
 body {
     font-family: Custom-font, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 500;
+    min-height: 100%;
     margin: 0;
     padding: 0;
-    min-height: 100%;
 }
+
+/* Font, list and video specific */
 
 @font-face {
         font-family: Custom-font;
@@ -13,16 +17,14 @@ body {
 }
 
 ul {
-    display: flex;
-    gap: 130px;
-    list-style-type: none;  
+    list-style-type: none; 
+    margin: 0; 
     padding: 0;
-    margin: 0;
 }
 
 a {
-    text-decoration: none;
     color: white;
+    text-decoration: none;
 }
 
 .orange {
@@ -34,61 +36,73 @@ a {
     font-weight: 1000;
 }
 
-.container {
+video {
+    border: 5px groove orange;
+    width: 600px;
+    border-radius: 5px;
+}
+
+/* Header specific */
+
+.header-container {
+    align-items: center;
     background: #1F2937;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 20px;
 }
 
-.header-two {
-    margin-right: 165px;
+.header-container2 {
     font-size: 26px;
+    margin-right: 23%;
+    white-space: nowrap;
 } 
 
-.section-one {
+.header-list {
     display: flex;
-    justify-content: space-around;
+    gap: 35%;
+}
+
+/* Main content/ section 1 - 4 specific */
+
+/* Section 1 / Hero Banner */
+
+.section1-container {
     align-content: center;
     background: #1F2937;
     color: #F9FAF8;
+    display: flex;
     font-size: 48px;
     font-weight: 0;
     height: 400px;
+    justify-content: space-around;
     text-align: center;
 }
 
-.section-one2 {
+.section1-container2 {
 margin-left: 100px;
 }
 
 .sub-hero {
-    font-size: 26px;
     color: #E5E7EB;
+    font-size: 26px;
     margin-top: -50px;
 }
 
 .button-one {
-    width:150px;
-    height:50px;    
+    background:#3882F6;
+    border: none; 
+    border-radius: 12.5px; 
+    color: aqua; 
+    cursor: pointer;
     font-size:20px;
     font-weight: 500px;
-    background:#3882F6;
-    color: aqua;
-    border: none; 
-    border-radius: 12.5px;  
+    height:50px; 
+    width:150px;
 }
 
-.button-two {
-    color: white;
-    font-size: 14px;
-    width: 100px;
-    height: 40px;
-border: 2px solid white;
-background: none;
-border-radius: 10px;
-}
+/* Section 2 */
+
 
 .section-two {
     display: flex;
@@ -103,6 +117,15 @@ align-items: center;
 text-align: center;
 }
 
+.images {
+    border: 3px solid orangered;
+    border-radius: 10px;
+    height: 300px;
+    width: 300px;
+}
+
+/* Section 3 */
+
 .section-three {
     display: flex;
     height: 700px;
@@ -111,15 +134,20 @@ text-align: center;
     background-color: #E5E7EB;
 }
 
-.box {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 60%;
-    height: 100px;
-   background-color: #3882F6;
-   border-radius: 10px;
+.video-two {
+    margin-top: 40px;
 }
+
+.text {
+    height: 400px;
+    width: 700px;
+    text-align: center;
+    font-size: 36px;
+    font-style: light italic;
+    color: #1F2937;
+}
+
+/* Section 4 */
 
 .section-four {
     display: flex;
@@ -129,6 +157,28 @@ text-align: center;
     color: white;
     }
 
+    .box {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 60%;
+        height: 100px;
+       background-color: #3882F6;
+       border-radius: 10px;
+    }
+
+    .button-two {
+        color: white;
+        font-size: 14px;
+        width: 100px;
+        height: 40px;
+    border: 2px solid white;
+    background: none;
+    border-radius: 10px;
+    }
+    
+/* Footer specific */
+
 .footer {
     display: flex;
     justify-content: center;
@@ -136,34 +186,4 @@ text-align: center;
     background: #1F2937;
     font-size: 22px;
     color: white;
-}
-
-img {
-    width:200px;
-}
-
-.images {
-    border: 5px solid blue;
-    border-radius: 10px;
-    height: 300px;
-    width: 300px;
-}
-
-.text{
-    height: 400px;
-    width: 700px;
-    text-align: center;
-font-size: 36px;
-font-style: light italic;
-color: #1F2937;
-}
-
-
-video {
-    width: 600px;
-    border: 5px groove white;
-}
- 
-.video-two {
-    margin-top: 40px;
-}
+} 
